TestSuite/errors/err0119.pas
var f : file of string;
begin
end.